changed the arrow

--- a/app/src/main/res/layout/list_.xml
+++ b/app/src/main/res/layout/list_.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:onClick="startAct">
 
     <ImageView
         android:layout_weight="0"
@@ -16,11 +17,12 @@
         android:layout_height="100dp"
         android:text="Franklin"
         android:id="@+id/text" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:text=">"
-        android:onClick="startAct"/>
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        android:src="@drawable/right_arrow" />
 
 </LinearLayout>
