Added list views to display the builds and counters

--- a/app/src/main/res/layout/vghero_layout.xml
+++ b/app/src/main/res/layout/vghero_layout.xml
@@ -4,11 +4,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/CategoryStyle"
-        android:padding="20sp"
-        android:text="Builds"/>
-    <TextView
-        style="@style/CategoryStyle"
-        android:text="Counters"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/CategoryStyle"
+            android:padding="20sp"
+            android:text="Builds" />
+
+        <ListView
+            android:id="@+id/builds"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <TextView
+            style="@style/CategoryStyle"
+            android:text="Counters" />
+
+        <ListView
+            android:id="@+id/counters"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
+    </LinearLayout>
 </LinearLayout>
