--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6A1B9A</color>
-    <color name="colorPrimaryDark">#4A148C</color>
+    <color name="colorPrimary">#cc0213</color>
+    <color name="colorPrimaryDark">#91020e</color>
     <color name="colorAccent">#FF4081</color>
     <color name="GTA_V">#4CAF50</color>
 </resources>
