--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="vg_theme" parent="Theme.AppCompat.Light.DarkActionBar" >
+    <item name="colorPrimary">#0277BD</item>
+    <item name="colorPrimaryDark">#01579B</item>\
+    <item name="colorAccent">#00897B</item>
+    </style>
+
+    <style name="gtaV_theme" parent="Theme.AppCompat.Light.DarkActionBar" >
+        <item name="colorPrimary">#43A047</item>
+        <item name="colorPrimaryDark">#2E7D32</item>\
+        <item name="colorAccent">#00897B</item>
+    </style>
+
 </resources>
