--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,16 +8,25 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="vg_theme" parent="Theme.AppCompat.Light.DarkActionBar" >
-    <item name="colorPrimary">#0277BD</item>
-    <item name="colorPrimaryDark">#01579B</item>\
-    <item name="colorAccent">#00897B</item>
+    <style name="vg_theme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#0277BD</item>
+        <item name="colorPrimaryDark">#01579B</item>
+        <item name="colorAccent">#00897B</item>
     </style>
 
-    <style name="gtaV_theme" parent="Theme.AppCompat.Light.DarkActionBar" >
+    <style name="gtaV_theme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#43A047</item>
         <item name="colorPrimaryDark">#2E7D32</item>\
         <item name="colorAccent">#00897B</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
 </resources>
