--- a/app/src/main/res/layout/build_tab1.xml
+++ b/app/src/main/res/layout/build_tab1.xml
@@ -11,8 +11,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*dummy text*"
-        android:textSize="30dp"/>
+        android:text="*Builds here*"
+        android:textSize="20dp"/>
 
     <ListView
         android:id="@+id/builds"
