--- a/app/src/main/res/layout/counter_tab2.xml
+++ b/app/src/main/res/layout/counter_tab2.xml
@@ -12,8 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*dummy text*"
-        android:textSize="30dp"/>
+        android:text="*Counters here*"
+        android:textSize="20dp"/>
 
     <ListView
         android:id="@+id/counters"
