--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="vg_theme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">#0277BD</item>
-        <item name="colorPrimaryDark">#01579B</item>
+        <item name="colorPrimary">#1976D2</item>
+        <item name="colorPrimaryDark">#0D47A1</item>
         <item name="colorAccent">#00897B</item>
     </style>
 
