removed fragment files(class & xml) & minor changes

--- a/app/src/main/res/layout/vg_hero1.xml
+++ b/app/src/main/res/layout/vg_hero1.xml
@@ -4,22 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            style="@style/CategoryStyle"
-            android:padding="20sp"
-            android:text="Builds" />
-
-        <ListView
-            android:id="@+id/builds"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -36,4 +20,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/CategoryStyle"
+            android:padding="20sp"
+            android:text="Builds" />
+
+        <ListView
+            android:id="@+id/builds"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"/>
+    </LinearLayout>
+
 </LinearLayout>
