--- a/app/src/main/res/layout/build_tab1.xml
+++ b/app/src/main/res/layout/build_tab1.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="*Builds here*"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:id="@+id/tb"/>
 
     <ListView
         android:id="@+id/builds"
