--- a/app/src/main/res/layout/counter_tab2.xml
+++ b/app/src/main/res/layout/counter_tab2.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="*Counters here*"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:id="@+id/tc"/>
 
     <ListView
         android:id="@+id/counters"
