--- a/app/src/main/res/layout/list_.xml
+++ b/app/src/main/res/layout/list_.xml
@@ -18,6 +18,7 @@
         android:id="@+id/text" />
 
     <ImageView
+        android:id="@+id/right_arrow"
         android:layout_width="30dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
